--- a/less2/task2/index.html
+++ b/less2/task2/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="start.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
