--- a/less23/task2/index.html
+++ b/less23/task2/index.html
@@ -10,20 +10,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body   class="page">
-    <div class="arena">
-        <div class="sector" data-sector-number='1'>
-            <div class="sector__line" data-line-number='1'>
-                <div class="sector__seat" data-seat-number='1'></div>
-                <div class="sector__seat" data-seat-number='1'></div>
-            </div>
-        </div>
-    </div>
+<body class="page">
+
+    <div class="arena"></div>
     <div class="board">
         <span>Selected seat</span>
         <span class="board__selected-seat">-</span>
     </div>
+
     <script src="index.js"></script>
 </body>
-
 </html>
