--- a/less24/hw3/index.html
+++ b/less24/hw3/index.html
@@ -16,6 +16,6 @@
         </div>
         <ul class="list"></ul>
     </main>
-    <script src="index.js"></script>
+    <script src="js/index.js" type="module"></script>
 </body>
 </html>
