--- a/less24/hw3/index.html
+++ b/less24/hw3/index.html
@@ -16,6 +16,8 @@
         </div>
         <ul class="list"></ul>
     </main>
-    <script src="js/index.js" type="module"></script>
+    <script src="renderer.js" type="module"></script>
+    <script src="createTask.js" type="module"></script>
+    <script src="updateTask.js" type="module"></script>
 </body>
 </html>
