--- a/less24/hw3/index.html
+++ b/less24/hw3/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <title>Todo List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
 </head>
+
 <body>
     <h1 class="title">Todo List</h1>
     <main class="todo-list">
         <div class="actions">
-            <input name="text" class="task-input" type="text">
-            <button class="btn create-task-btn" >Create</button>
+            <input class="task-input" type="text">
+            <button class="btn create-task-btn">Create</button>
         </div>
         <ul class="list"></ul>
     </main>
-    <script src="renderer.js" type="module"></script>
-    <script src="createTask.js" type="module"></script>
-    <script src="updateTask.js" type="module"></script>
+
+    <script src="renderer.js"></script>
+    <script src="createTask.js"></script>
+    <script src="updateTask.js"></script>
 </body>
+
 </html>
