--- a/less30/hw2/index.html
+++ b/less30/hw2/index.html
@@ -10,6 +10,6 @@
     <div class="page">
         <span class="img-size"></span>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
